# rmolints

./: BASIS_SETS_SUMMARY.txt  BASIS_SET_IMPLEMENTATION.md  BASIS_SET_SCALING.md  BENCHMARK_RESULTS.md  CLAUDE.md  COMPLETE_BASIS_SETS_H_AR.txt  Cargo.toml  FINAL_SUMMARY.md  FLAT_ARRAY_RESULTS.md  GOAL.md  HGP_BUG_FIX.md  HGP_HASHMAP_ALTS.md  HGP_OPTIMIZATION.md  LICENSE  MOLECULES.md  PARALLEL.md  PARALLEL_SUMMARY.md  PROFILING.md  PROGRESS.md  README.md  SIMD_RESULTS.md  UPDATE_SUMMARY.md  VRR_CONTRACTION_OPTIMIZATION.md  basis_sets_h_to_ar.json
docs/: DOCS.md
examples/: benchmark.rs  benchmark_631gdp.rs  benzene_integrals.rs  contracted_molecule_benchmark.rs  contraction_benchmark.rs  h2o_integrals.rs  hgp_comparison.rs  molecule_benchmark.rs  parallel_benchmark.rs  profile_hgp_opt.rs  profile_hgp_opt_serial.rs  psi4_benchmark.py  pyquante2_benchmark.py  quick_631gdp_test.rs  ratio_analysis.rs  rys_comparison.rs  rys_optimization_benchmark.rs  schwarz_benchmark.rs  simd_benchmark.rs  use_contracted_hgp.rs  vrr_tensor_comparison.rs
reference/: one.py  two.py
src/: basis.rs  basis_data.rs  boys.rs  hgp.rs  hgp_opt.rs  hgp_simd.rs  lib.rs  molecule.rs  one_electron.rs  parallel.rs  rys.rs  rys_roots_123.rs  rys_roots_4.rs  rys_roots_5.rs  rys_roots_general.rs  two_electron.rs  utils.rs
